Replace robots noindex with none, to avoid following links on pages that should not be indexed

--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -24,7 +24,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     {% if SERVER_NAME != 'www.bashoneliners.com' %}
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="none">
     {% endif %}
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
